--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,9 @@
 Source: softether-vpn
 Section: net
 Priority: optional
-Orig-Maintainer: Dmitry Orlov <me@mosquito.su>
-Maintainer: Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>
-Build-Depends: debhelper (>= 10), libncurses5-dev, linux-libc-dev, libssl1.0-dev, libreadline-dev, build-essential, dh-exec, zlib1g-dev
-Standards-Version: 4.0.0
+Maintainer: Dmitry Orlov <me@mosquito.su>
+Build-Depends: debhelper (>= 7.0.50~), libncurses-dev, linux-libc-dev, libssl-dev, libreadline-dev, build-essential, dh-exec
+Standards-Version: 3.9.1
 Homepage: http://www.softether.org/
 
 Package: softether-vpnbridge
